--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,12 @@
     margin: 0;
 }
 
+html{
+    scroll-behavior: smooth;    
+    scroll-padding-top: 20rem;  
+    max-width: 100%;    
+}
+
 body{
     font-family: 'Poppins', sans-serif;
     color: #3E3E3E; 
