--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,16 +84,13 @@ nav .logo #menuBar{
 /* Hero Section Start */
 
 #hero{
-    background-color: #dde9ff;
+    background-color: #dde9ff;    
+    height: 480px;
 }
 
 .container{    
     width: 1120px;
     margin: auto;
-}
-
-#hero{
-    height: 480px;
 }
 
 #hero .container{
@@ -166,6 +163,7 @@ h1{
     justify-content: center;
     align-items: center;
     background-color: #276FD8;
+    border: none;
     border-radius: 50px 50px 50px 0px;
     width: 65px;
     height: 65px;
