--- a/CSS/style.css
+++ b/CSS/style.css
@@ -650,7 +650,7 @@ footer .container .content .links ul li a{
         display: none;
     }
 
-    #navbar a #menuBar{
+    #navbar a #menuBar img{
         width: 30px;
         display: flex;
     }
