--- a/CSS/style.css
+++ b/CSS/style.css
@@ -305,6 +305,10 @@ h2{
     border: 0px solid #276FD8;
 }
 
+#services .container .boxes .box{
+    text-decoration: none;
+}
+
 h4{
     font-size: 20px;
     font-weight: 600;    
