--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,6 +21,7 @@ body{
     --blue: #0d6efd;
     --darkgray: #3d3d3d;
     --white: #fff;
+    --fadedblue: #dde9ff;
 }
 
 .nav-container{
@@ -97,7 +98,7 @@ body{
 /* Hero Section Start */
 
 #hero{
-    background-color: #dde9ff;    
+    background-color: var(--fadedblue);    
     height: 480px;
 }
 
