--- a/CSS/style.css
+++ b/CSS/style.css
@@ -636,7 +636,7 @@ footer .container .content .links ul li a{
 
 
 
-@media (max-width:720px) {
+@media screen and (max-width:720px) {
 
     *{
         box-sizing: border-box;
