--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,7 @@ body{
 /* Navbar starts */
 
 :root{
-    --blue: #0d6efd;
+    --blue: #2f7ff8;
     --deepblue: #0151ff;
     --darkgray: #3d3d3d;
     --white: #fff;
