--- a/CSS/style.css
+++ b/CSS/style.css
@@ -640,7 +640,8 @@ footer .container .content .links ul li a{
 
 
 
-@media (max-width:450px) {
+
+@media screen and (max-width: 720px) {
 
     *{
         box-sizing: border-box;
