--- a/Assets/CSS/chat.css
+++ b/Assets/CSS/chat.css
@@ -15,6 +15,7 @@
     position: fixed;
     bottom: 10px;
     right: 30px;
+    z-index: 2;
 }
 
 /* CONTENT IS CLOSE */
@@ -24,7 +25,7 @@
     background: var(--liteblue);
     width: 350px;
     height: 450px;
-    z-index: -123456;
+    z-index: 123456;
     opacity: 0;
     transition: all .5s ease-in-out;
     border-radius: 20px;
@@ -116,4 +117,154 @@
     width: 30px;
     height: 30px;    
     cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 720px) {
+    .chatbox {
+        position: fixed;
+        bottom: 10px;
+        right: 30px;
+        width: 90%;
+    }
+    
+    /* CONTENT IS CLOSE */
+    .chatbox-support {
+        display: flex;
+        flex-direction: column;
+        background: var(--liteblue);
+        width: 350px;
+        height: 450px;
+        z-index: 123456;
+        opacity: 0;
+        transition: all .5s ease-in-out;
+        border-radius: 20px;
+        box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
+        margin: auto;
+    }
+    
+    /* CONTENT ISOPEN */
+    .chatbox-active {
+        transform: translateY(-40px);
+        z-index: 123456;
+        opacity: 1;
+        
+    }
+    
+    /* BUTTON
+    .chatbox_button {
+        text-align: right;
+    } */
+    
+    
+    /* HEADER */
+    .chatbox-header {
+        position: sticky;
+        top: 0;
+        padding: 10px 20px;
+        background: var(--blue);
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        color: var(--swawnsdown);
+        box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
+    }
+    
+    /* MESSAGES */
+    .chatbox-messages {
+        margin-top: auto;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        flex-direction: column;
+        padding: 20px;
+    }
+    
+    .messages-item {
+        background: var(--white);
+        max-width: 70%;
+        width: fit-content;
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 20px;
+        color: var(--darkgray);
+    }
+    
+    .messages-item-operator {
+        margin-right: auto;
+    }
+    
+    .messages-item-visitor {
+        margin-left: auto;
+    }
+    
+    /* FOOTER */
+    .chatbox-footer {
+        position: sticky;
+        bottom: 0;
+    }
+    
+    .chat-footer{    
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    
+    #textBox{
+        padding: 0 10px;
+        margin: 15px 20px;
+        border-radius: 10px;
+        border: 0;
+        width: 70%;
+        height: 40px;
+        color: var(--darkgray);
+    }
+    
+    .chat-footer button{
+        background-color: transparent;
+        border: 0;
+    }
+    
+    .chat-footer button img{
+        width: 30px;
+        height: 30px;    
+        cursor: pointer;
+    }
 }
