--- a/Assets/CSS/chat.css
+++ b/Assets/CSS/chat.css
@@ -14,8 +14,9 @@
 .chatbox {
     position: fixed;
     bottom: 10px;
-    right: 30px;
+    right: 30px;   
     z-index: 1;
+    
 }
 
 /* CONTENT IS CLOSE */
@@ -26,17 +27,16 @@
     width: 320px;
     height: 450px;
     z-index: -123456;
-    opacity: 0;
     transition: all .5s ease-in-out;
     border-radius: 20px;
-    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
+    display: none;
 }
 
 /* CONTENT ISOPEN */
 .chatbox-active {
     transform: translateY(-40px);
     z-index: 1;
-    opacity: 1;
+    display: table;
     
 }
 
@@ -55,7 +55,6 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     color: var(--swawnsdown);
-    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
 }
 
 /* MESSAGES */
@@ -73,7 +72,7 @@
     max-width: 70%;
     width: fit-content;
     padding: 10px;
-    margin: 10px 0;
+    /* margin: 10px 0; */
     border-radius: 20px;
     color: var(--darkgray);
 }
@@ -84,6 +83,7 @@
 
 .messages-item-visitor {
     margin-left: auto;
+    background-color: transparent;
 }
 
 /* FOOTER */
@@ -96,6 +96,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
 }
 
 #textBox{
@@ -162,8 +165,9 @@
     .chatbox {
         position: fixed;
         bottom: 10px;
-        right: 30px;
-        width: 90%;
+        right: 0;
+        left: 0;
+        width: 100%;
     }
     
     /* CONTENT IS CLOSE */
@@ -174,10 +178,9 @@
         width: 320px;
         height: 450px;
         z-index: 1;
-        opacity: 0;
+        display: none;
         transition: all .5s ease-in-out;
         border-radius: 20px;
-        box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
         margin: auto;
     }
     
@@ -185,8 +188,7 @@
     .chatbox-active {
         transform: translateY(-40px);
         z-index: 1;
-        opacity: 1;
-        
+        display: table;
     }
     
     /* BUTTON
@@ -197,14 +199,15 @@
     
     /* HEADER */
     .chatbox-header {
-        position: sticky;
+        position: fixed;
         top: 0;
         padding: 10px 20px;
         background: var(--blue);
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         color: var(--swawnsdown);
-        box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.1);
+        width: 100%;
+        margin: auto;
     }
     
     /* MESSAGES */
@@ -215,6 +218,7 @@
         overflow-y: scroll;
         flex-direction: column;
         padding: 20px;
+        margin: 50px 0 0;
     }
     
     .messages-item {
@@ -222,7 +226,6 @@
         max-width: 70%;
         width: fit-content;
         padding: 10px;
-        margin: 10px 0;
         border-radius: 20px;
         color: var(--darkgray);
     }
@@ -233,6 +236,7 @@
     
     .messages-item-visitor {
         margin-left: auto;
+        background-color: transparent;
     }
     
     /* FOOTER */
@@ -245,6 +249,9 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
     }
     
     #textBox{
